Fixed some rendering problems on mobile

--- a/public/css/gomp.css
+++ b/public/css/gomp.css
@@ -11,3 +11,7 @@ main {
 .required:after {
     content:" *";
 }
+
+.clickable {
+    cursor: pointer;
+}
